--- a/requests.html
+++ b/requests.html
@@ -203,25 +203,25 @@
 
 									<label>
 										<input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
-										Все
+										<span class="check-padding">Все</span>
 									</label>
 								</div>
 								<div class="radio">
 									<label>
 										<input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-										Новые
+										<span class="check-padding">Новые</span>
 									</label>
 								</div>
 								<div class="radio">
 									<label>
 										<input type="radio" name="optionsRadios" id="optionsRadios3" value="option3">
-										На экспертизе
+										<span class="check-padding">На экспертизе</span>
 									</label>
 								</div>
 								<div class="radio">
 									<label>
 										<input type="radio" name="optionsRadios" id="optionsRadios3" value="option3">
-										Утвержденные
+										<span class="check-padding">Утвержденные</span>
 									</label>
 								</div>
 							</div>
