--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
  <h1 style="text-align: center">Храним здесь все линки на страницы, для удобства работы</h1>
  <br>
  <!-- Делаем ссылку чтоб каждый раз не прописывать путь -->
-  <p><a href="request_detail.html"><b>detail</b> 1</a></p>
-  <p><a href="requests.html"><b>request</b> 2</a></p>
+  <p><a href="./request_detail.html"><b>detail</b> 1</a></p>
+  <p><a href="./requests.html"><b>request</b> 2</a></p>
 
  </body>
 </html>
